gift box! sec 2

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 				<img id="office" src="images/Screen 2/Office_Empty.png">	
 				<img id="sofa"   src="images/Screen 2/Sofa_Man.png">
 				<div id="sec2_info"></div>
+				<div id="gift"></div>
+				<div id="gift_top"</div>
 			</section>
 
 			<section id="sec3">
