--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 <body>
 	<div id="wrapper">
 		<header>
+			<a id="facebook" href="#"> </a>
+			<a id="twitter" href="#"> </a>
+			<a id="mail" href="#"> </a>
+			<p id="about"> | &nbsp;&nbsp;&nbsp;&nbsp; אודות </p>
 		</header>
 		<section id="title">
 		</section>
@@ -70,6 +74,7 @@
 						<p class="perButton" id="per6"> <br>	6%	 </p>
 						<p class="perButton" id="per5"> <br>	5%	 </p>
 					</article>
+					<h4>(ברירת מחדל)</h4>
 					<article id="percentage_second">	
 									<p class="text_sec4"> כלומר </p>
 									<p id="perMonth"> </label>
@@ -169,6 +174,7 @@
 				<div id="haircut_line"></div>
 				<div id="scissors"></div>
 			</section>
+			
 			<section id="sec10"> 
 				<h1> במשא ומתן על השכר, אפשר ללחוץ על הבוס <br>
 					 שהחיסכון לפנסיה יהיה מחושב מכל השכר </h1>
@@ -179,10 +185,14 @@
 				</div>
 				<div id="boss_talk"></div>
 			</section>
+			
 			<section id="sec11">
 				 	<img src="images/Screen_11/info.png">  </img>
 			</section>
-			<section id="sec12">	</section>
+			
+			<section id="sec12">	
+				<h1> ..משהו נחמד לסוף</h1>
+			</section>
 		</main>
 		<nav>
 			<div class="dotstyle dotstyle-scaleup">
@@ -209,24 +219,3 @@
 	</div>
 </body>
 </html>
-
-
-
-
-
-<!-- 
-<article id="percentageButtons">
-						<button id="per5" value="5" onclick="calcIt(document.getElementById('salary').value,this.value)" onmouseup="selectedButton('5')">   5%	 </button>
-						<button id="per6" value="6" onclick="calcIt(document.getElementById('salary').value,this.value)" onmouseup="selectedButton('6')"> 	6%	 </button>
-						<button id="per7" value="7" onclick="calcIt(document.getElementById('salary').value,this.value)" onmouseup="selectedButton('7')"> 	7%	 </button>
-					</article>
-					<article id="percentageInputs">
-						<input class="shake" id="totalAmout" type="text" name="total_amount_after_40years" value="581,674" readonly> 
-						<input id="perMonth" type="text" name="monthly_secretion" value="450" readonly> 
-						<input id="salary" type="text" name="monthly_salary" value="9,000" onchange="calcIt(this.value,5), selectedButton('5')">
-						<br> <br>
-						<p> שכר חודשי </p>
-						<p> הפרשה חודשית </p>
-						<p> אחרי 40 שנה </p>
-					</article>
- -->
