--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<img id="sofa"   src="images/Screen 2/Sofa_Man.png">
 				<div id="sec2_info"></div>
 				<div id="gift"></div>
-				<div id="gift_top"</div>
+				<div id="gift_top"></div>
 			</section>
 
 			<section id="sec3">
