start of graph page 7 + new pictures in page 5

--- a/index.html
+++ b/index.html
@@ -166,7 +166,10 @@
 				</div>		
 			</section>
 		
-			<section id="sec7">	 </section>
+			<section id="sec7">	 
+				<article></article>
+				<article></article>
+			</section>
 		
 			<section id="sec8">		
 				<div id="card"> </div>   
