page 7 title and positioning

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 			</section>
 		
 			<section id="sec7">	 
+				<h1>חשוב לבדוק דמי ניהול</h1>
 				<article></article>
 				<article></article>
 			</section>
