graph with active class

--- a/index.html
+++ b/index.html
@@ -170,6 +170,15 @@
 				<h1>חשוב לבדוק דמי ניהול</h1>
 				<article></article>
 				<article></article>
+				
+				<section id="graph">
+					<div id="KlalCol" class="column"></div>
+					<div id="MenorahCol" class="column"></div>
+					<div id="HarelCol" class="column"></div>
+					<div id="MigdalCol" class="column"></div>
+					<div id="AyalonCol" class="column"></div>
+					<div id="PhoenixCol" class="column"></div>
+				</section>	
 			</section>
 		
 			<section id="sec8">		
