page 7 graph continue hover try

--- a/index.html
+++ b/index.html
@@ -170,7 +170,15 @@
 				<h1>חשוב לבדוק דמי ניהול</h1>
 				<article></article>
 				<article></article>
-				
+				<article></article>
+				<!-- klal -->
+				<article class="bubble">   
+					<article class="bubbleFrame">
+							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 104,023</p> 
+							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11.4 % </p>
+					</article>  
+				</article>
+	
 				<section id="graph">
 					<div id="KlalCol" class="column"></div>
 					<div id="MenorahCol" class="column"></div>
@@ -179,6 +187,7 @@
 					<div id="AyalonCol" class="column"></div>
 					<div id="PhoenixCol" class="column"></div>
 				</section>	
+				
 			</section>
 		
 			<section id="sec8">		
