--- a/index.html
+++ b/index.html
@@ -172,13 +172,48 @@
 				<article></article>
 				<article></article>
 				<!-- klal -->
-				<article class="bubble">   
+				<article class="bubble" id="KlalCol_info">   
 					<article class="bubbleFrame">
 							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 104,023</p> 
 							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11.4 % </p>
 					</article>  
 				</article>
-	
+				<!-- menora -->
+				<article class="bubble" id="MenorahCol_info">   
+					<article class="bubbleFrame">
+							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 104,023</p> 
+							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11.4 % </p>
+					</article>  
+				</article>
+				<!-- harel -->
+				<article class="bubble" id="HarelCol_info">   
+					<article class="bubbleFrame">
+							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 104,023</p> 
+							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11.4 % </p>
+					</article>  
+				</article>
+				<!-- migdal -->
+				<article class="bubble" id="MigdalCol_info">   
+					<article class="bubbleFrame">
+							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 104,023</p> 
+							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11.4 % </p>
+					</article>  
+				</article>
+				<!-- ayalon -->
+				<article class="bubble" id="AyalonCol_info">   
+					<article class="bubbleFrame">
+							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 104,023</p> 
+							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11.4 % </p>
+					</article>  
+				</article>
+				<!-- pheonix -->
+				<article class="bubble" id="PhoenixCol_info">      
+					<article class="bubbleFrame">
+							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 104,023</p> 
+							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11.4 % </p>
+					</article>  
+				</article>
+
 				<section id="graph">
 					<div id="KlalCol" class="column"></div>
 					<div id="MenorahCol" class="column"></div>
@@ -210,8 +245,8 @@
 			</section>
 			
 			<section id="sec10"> 
-				<h1> במשא ומתן על השכר, אפשר ללחוץ על הבוס <br>
-					 שהחיסכון לפנסיה יהיה מחושב מכל השכר </h1>
+				<h1>במשא ומתן על השכר, אפשר <b>ללחוץ</b> על הבוס <br>
+					 כדי שהחיסכון לפנסיה יהיה מחושב מכל השכר</h1>
 				<div id="boss_face"></div>
 				<div class="progressbar">
 					 <span class="progressbar-value"></span>
