prepare for presentation

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 			</section>
 			
 			<section id="sec10"> 
-				<h1>במשא ומתן על השכר, אפשר <b>ללחוץ</b> על הבוס <br>
+				<h1>במשא ומתן על השכר, אפשר ללחוץ על הבוס<br>
 					 כדי שהחיסכון לפנסיה יהיה מחושב מכל השכר</h1>
 				<div id="boss_face"></div>
 				<div class="progressbar">
