--- a/index.html
+++ b/index.html
@@ -261,6 +261,13 @@
 			
 			<section id="sec12">	
 				<h1> ..משהו נחמד לסוף</h1>
+				<section id="final_frame">
+						<article id="maslul"></article>
+						<article id="keren"></article>			
+						<article id="percentage"></article>			
+						<article id="akamol"></article>			
+						<article id="piturim"></article>			
+						<article id="talking"></article>			
 			</section>
 		</main>
 		<nav>
