my last commit~

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/custom.css" >
 	<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" >
+	<link rel="icon" 
+      type="image/png" 
+      href="images/Frame/favicon.png" 
+    />
 	<script type="text/javascript" src="deploy/modernizr.min.js"></script>
 	<script type="text/javascript" src="deploy/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="deploy/functions.js"></script>
@@ -16,7 +20,7 @@
 	<script type="text/javascript" src="deploy/jquery.easing.1.3.js"> </script>
 	<script type="text/javascript" src="deploy/jquery.backgroundpos.js"> </script>
 
-	<title>Pensya</title>
+	<title>פנסיה זו לא מילה גסה</title>
 </head>
 <body>
 	<div id="wrapper">
@@ -174,43 +178,43 @@
 				<!-- klal -->
 				<article class="bubble" id="KlalCol_info">   
 					<article class="bubbleFrame">
-							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 104,023</p> 
-							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11.4 % </p>
+							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 106,964</p> 
+							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11 % </p>
 					</article>  
 				</article>
 				<!-- menora -->
 				<article class="bubble" id="MenorahCol_info">   
 					<article class="bubbleFrame">
-							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 104,023</p> 
-							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11.4 % </p>
+							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 95,945</p> 
+							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">12 % </p>
 					</article>  
 				</article>
 				<!-- harel -->
 				<article class="bubble" id="HarelCol_info">   
 					<article class="bubbleFrame">
-							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 104,023</p> 
-							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11.4 % </p>
+							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 103,110</p> 
+							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">12 % </p>
 					</article>  
 				</article>
 				<!-- migdal -->
 				<article class="bubble" id="MigdalCol_info">   
 					<article class="bubbleFrame">
-							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 104,023</p> 
-							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11.4 % </p>
+							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 93,987</p> 
+							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">13 % </p>
 					</article>  
 				</article>
 				<!-- ayalon -->
 				<article class="bubble" id="AyalonCol_info">   
 					<article class="bubbleFrame">
-							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 104,023</p> 
-							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11.4 % </p>
+							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 78,258</p> 
+							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">16 % </p>
 					</article>  
 				</article>
 				<!-- pheonix -->
 				<article class="bubble" id="PhoenixCol_info">      
 					<article class="bubbleFrame">
-							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 104,023</p> 
-							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">11.4 % </p>
+							<p class="bubbleTitel">תשואה</p> <p class="bubbleInfo">₪ 71,528</p> 
+							<p class="bubbleTitel"> <br>	דמי ניהול</p>	<p class="bubbleInfo">18 % </p>
 					</article>  
 				</article>
 
