page 8 fixed maybe ?

--- a/index.html
+++ b/index.html
@@ -230,9 +230,11 @@
 			</section>
 		
 			<section id="sec8">		
-				<div id="card"> </div>   
-				<div id="envelope_up"> </div>
-				<div id="envelope_down"> </div>
+				<section id="wrapper_sec8"> 
+					<div id="card"> </div>   
+					<div id="envelope_up"> </div>
+					<div id="envelope_down"> </div>
+				</section>
 			</section>
 		
 			<section id="sec9">
